# cpc-evaluator

./: .env.example  .gitignore  LICENSE  README.md  api.py  config.ini  gpt-4o-mini_evaluation_07.28.2024_17.xlsx  pyproject.toml
evaluation_log/: evaluation_log_20240728_154951.txt
evaluation_logs/: evaluation_log_20240729_101130.txt  evaluation_log_20240729_101509.txt
prompts/: claude_clinical_phrase_prompt.yaml  claude_clinical_phrase_prompt.yml  claude_phrase_cleaner_prompt.yml  clinical_phrase_openai.yml  openai_clinical_phrase_prompt.yml  phrase_cleaner.yml
utils/: __init__.py  eval_handler.py  print_handler.py  query_handler.py
