[tool.poetry]
name = "cpc-evaluator"
version = "v0.1.0"
description = "Library for evaluating LLMs ability to accurately assign ICD-10 and CPT codes to clinical phrases."
authors = ["jilp <hedronstone@protonmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pyyaml = "^6.0.1"
python-dotenv = "^1.0.1"
openai = "^1.37.1"
colorama = "^0.4.6"
pandas = "^2.2.2"
datasets = "^2.20.0"
tenacity = "^8.5.0"
uvicorn = "^0.30.3"
fastapi = "^0.111.1"
pydantic = "^2.8.2"
openpyxl = "^3.1.5"


[tool.poetry.group.dev.dependencies]
isort = "^5.13.2"
black = "^24.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
